--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,76 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   font-family: sans-serif;
   text-align: center;
+}
+
+.bg {
+  color: blueviolet;
+  background: url("https://cdn.pixabay.com/photo/2017/08/18/18/56/dices-over-newspaper-2656028_1280.jpg");
+  height: 100vh;
+  width: 100vw;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-origin: center;
+  background-size: cover;
+  filter: blur(4px);
+  -webkit-filter: blur(4px);
+}
+
+.container {
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 2px solid transparent;
+  border-radius: 0.3rem;
+  position: absolute;
+  top: 15rem;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+}
+.heading {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+form {
+  font-size: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+input {
+  width: 60%;
+  max-width: 20rem;
+  height: fit-content;
+  padding: 0.2rem 0.3rem;
+  margin: 1rem auto 2rem auto;
+  border: 2px solid transparent;
+  border-radius: 0.3rem;
+  font-size: 1.3rem;
+}
+
+.output {
+  background-color: whitesmoke;
+  color: rgba(0, 0, 0, 0.8);
+  width: 70%;
+  max-width: 25rem;
+  margin: auto;
+  height: fit-content;
+  padding: 0.3rem 0.5rem;
+  border: 2px solid tranparent;
+  border-radius: 0.3rem;
+}
+
+.btn {
+  margin-bottom: 1rem;
 }
