--- a/src/styles.css
+++ b/src/styles.css
@@ -9,11 +9,10 @@
 }
 
 .bg {
-  color: blueviolet;
   background: url("https://cdn.pixabay.com/photo/2017/08/18/18/56/dices-over-newspaper-2656028_1280.jpg");
-  height: 100vh;
+  height: 58rem;
   width: 100vw;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: center;
   background-origin: center;
   background-size: cover;
@@ -28,7 +27,7 @@
   border: 2px solid transparent;
   border-radius: 0.3rem;
   position: absolute;
-  top: 18rem;
+  top: 30rem;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
@@ -60,10 +59,11 @@ input {
 }
 
 .output {
+  font-size: 1.3rem;
   background-color: whitesmoke;
   color: rgba(0, 0, 0, 0.8);
-  width: 70%;
-  max-width: 25rem;
+  width: fit-content;
+  max-width: 35rem;
   margin: auto;
   height: fit-content;
   padding: 0.3rem 0.5rem;
@@ -85,4 +85,85 @@ input {
   cursor: pointer;
   transform: scale(1.05);
   background-color: rgb(255, 255, 255, 0.85);
+}
+.emojiWrapper {
+  margin: 0.5rem;
+}
+.emoji {
+  height: 5rem;
+  width: 5rem;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-origin: center;
+}
+
+/* Footer Section */
+
+.creator {
+  text-align: center;
+  margin: 0.4rem;
+  color: black;
+}
+.creator strong {
+  color: hotpink;
+}
+.footerLink a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 1rem;
+  font-size: 1.4rem;
+  transition: 0.3s;
+}
+
+.footerLink a:hover {
+  transform: scale(1.1);
+}
+
+footer li {
+  font-size: 1.2rem;
+  margin: 0rem 0.3rem;
+}
+
+footer {
+  background-color: rgb(255, 255, 255, 0.7);
+  padding: 1rem;
+  border: 1px transparent;
+  border-radius: 0.5rem;
+  margin: 2rem;
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-inline-start: 0px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  flex-wrap: wrap;
+}
+
+.socialIcon {
+  height: 2rem;
+  width: 2rem;
+}
+@media (max-width: 490px) {
+  .container {
+    top: 32rem;
+  }
+}
+@media (max-width: 450px) {
+  .bg {
+    height: 74rem;
+  }
+  .container {
+    top: 40rem;
+  }
+}
+
+@media (max-width: 375px) {
+  .bg {
+    height: 80rem;
+  }
 }
